//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package types;

message UserType {}
